--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <slf4j>2.0.13</slf4j>
         <logback>1.5.6</logback>
         <allure.version>2.29.0</allure.version>
+        <restAssured>5.5.0</restAssured>
+        <jackson>2.17.2</jackson>
     </properties>
 
     <dependencies>
@@ -62,6 +64,17 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-selenide</artifactId>
             <version>${allure.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${restAssured}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson}</version>
         </dependency>
 
     </dependencies>
