--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <allure.version>2.29.0</allure.version>
         <restAssured>5.5.0</restAssured>
         <jackson>2.17.2</jackson>
+        <lombok>1.18.34</lombok>
     </properties>
 
     <dependencies>
@@ -75,6 +76,18 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.5.0</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
